--- a/angular.json
+++ b/angular.json
@@ -35,8 +35,8 @@
 				},
 				"extract-i18n": {
 					"builder": "@angular-devkit/build-angular:extract-i18n",
-					"options": {
-						"browserTarget": "shell:build"
+          "options": {
+            "buildTarget": "shell:build"
 					}
 				},
 				"test": {
@@ -107,11 +107,11 @@
 				"serve-original": {
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
-						"production": {
-							"browserTarget": "shell:build:production"
+            "production": {
+              "buildTarget": "shell:build:production"
 						},
-						"development": {
-							"browserTarget": "shell:build:development"
+            "development": {
+              "buildTarget": "shell:build:development"
 						}
 					},
 					"defaultConfiguration": "development"
@@ -150,8 +150,8 @@
 				},
 				"extract-i18n": {
 					"builder": "@angular-devkit/build-angular:extract-i18n",
-					"options": {
-						"browserTarget": "mfe1:build"
+          "options": {
+            "buildTarget": "mfe1:build"
 					}
 				},
 				"test": {
@@ -222,11 +222,11 @@
 				"serve-original": {
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
-						"production": {
-							"browserTarget": "mfe1:build:production"
+            "production": {
+              "buildTarget": "mfe1:build:production"
 						},
-						"development": {
-							"browserTarget": "mfe1:build:development"
+            "development": {
+              "buildTarget": "mfe1:build:development"
 						}
 					},
 					"defaultConfiguration": "development"
